Fix About Me spacing on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -23,14 +23,6 @@
      }
 }
 
-@media (max-width:400px)
-{
-     #about-me
-     {
-          margin-top: 2.5rem;
-     }
-}
-
 #about-me a
 {
      color: #5D68BB;
